 bug   : increase on bug fixes

Version 2.1.2 - 28 of February 2015 (tested with Python 2.7.9, PHP 5.5.22, ExaBGP 3.4.8)
 - Change: Adding Bootstrap as a front-end framework.
 - Improvement: HTML code has been modified to be HTML5 compliant.
 - Fix: use MySQLi extension instead of MySQL which is deprecated in PHP 5.5.x.
 - Fix: code corrections to remove PHP warnings.

Version 2.1.1 - 27th of February 2015 (tested with Python 2.7.9, PHP 5.5.22, ExaBGP 3.4.8)
 - Fix: string conversion when handling "state up" notifications.
 - Fix: handling empty BGP updates with EOR marker.
 - Feature: adding an option to ignore default routes.

Version 2.1.0 - 25th of July 2014
 - Change: Rewriting code to support the new format of JSON messages received from ExaBGP 3.4.
 - Improvement: Changes in ExaBGP config file.

Version 2.0.0 - 24th of May 2014
 - Implementing multithreading. A few threads can process updates received from ExaBGP.
 - Adding prefix cache to limit number of SQL queries. Be careful because the collector.py process size may grow to hundreds of MB or more.
 - Adding option to turn off all SQL operation.
 - Improved logging.
 - Making code PEP8 compliant with a single exception E501 (line too long).

Version 1.0.2 - 17th of April 2014
 - Issue with stats_delayed feature (FIXED)
 - Web browsers complain to load jquery from unsecure URL when GIXLG is installed as a secure website (FIXED)
 - In debug mode collector process dies when a MySQL exception is rised without logging the reason (FIXED)
 - Debug mode logging (IMPROVEMENT)
 - Disable mysql ping in a default config
 
Version 1.0.1 - 16th of February 2014
 * Adding an option to delay updates for members stats. This will significatly reduce number of requests to MySQL database
 - Issue: sys.stdin.readline is blocking other threads

Version 1.0.0 - 15th of February 2014